force-app/main/default/objects/Staff__c/fields/Department_Name_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name_Manager_Name__c</fullName>
    <formula>Department__r.Department_Name__c   &amp; &quot;- &quot; &amp;  Department__r.Manager__c</formula>
    <label>Department Name-Manager Name</label>
    <type>Text</type>
</CustomField>