force-app/main/default/objects/Staff__c/fields/Has_started_working__c.field-meta.xml
<CustomField>
    <fullName>Has_started_working__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has started working?</label>
    <type>Checkbox</type>
</CustomField>