force-app/main/default/objects/Staff__c/fields/Leave_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Leave_Request_Status__c</fullName>
    <label>Leave Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>HR’s Approval Pending</fullName>
            </value>
            <value>
                <fullName>CEO’s Approval Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>