force-app/main/default/objects/Staff__c/fields/Number_of_Leave_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Leave_Days__c</fullName>
    <label>Number of Leave Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>